# simple_xml_parser

./: .gitignore  CMakeLists.txt  README.md
include/: simple_xml.h  stl_helper_functions.hpp
include/detail/: stl_helper_functions_impl.hpp
src/: simple_xml.cpp
tests/: CMakeLists.txt  tests.cpp
